# shapes

./: CMakeLists.txt
src/: main.cpp  main_window.cpp  main_window.h  shape.cpp  shape.h  shape_widget.cpp  shape_widget.h
